# cas-practic

./: pyproject.toml
cas_practic/: churn_predict_service.py
models/: churn-model.pck
notebooks/: CasPractic.ipynb  client.ipynb  prova.ipynb
